See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.51.00

              Add ppmtoascii.  Thanks "Frank Ch. Eigler" <fche@elastic.org>.

              pamx: Make exit status 0 instead of 10 when window manager
              requests termination.

              pnmsmooth: Respect -plain.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmsmooth: Don't display pnmconvol messages (i.e. run
              pnmconvol with -quiet).

              pnmtops: fix bug: 12 bits per sample output when 8 would do.
              Introduced in 10.40.

              palmtopnm: fix for pixel size 16.  Thanks Paul Bolle
              <pebolle@tiscali.nl>.

              pnmsmooth: Fail politely when convolution matrix is so
              large as to bust the system's program parameter size limit
              on the invocation of pnmconvol.

              avstopam: fix incorrect output.

              pnmsmooth: fix arithmetic overflow with absurdly large
              convolution matrix dimensions.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmsmooth: fix wild pointer: causes wrong arguments to
              'pnmconvol'.  Introduced in 10.50.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pamscale: fix -reduce.  Introduced in 10.27.

              pampaintspill: fix incorrect output.

              configure: don't default to /usr/X11R6/lib/libX11.so just because
              /usr/X11R6 exists.  /usr/X11R6/lib must exist.

10.03.27 BJH  Release 10.50.00

              Add pamtoavs, avstopam.  Thanks Scott Pakin.

              Add pampaintspill.

              pnmconvol: Add -normalize .

              pm_system(): Close extraneous file descriptors that, among
              other things, prevent child from seeing EOF.

              libnetpbm: Add PNM_GETR(), PNM_GETG(), PNM_GETB().  Same